# TJRayTracer

./: .gitignore  CMakeLists.txt  LICENSE  TJRayTracerConfig.cmake.in
RayTracer/: CMakeLists.txt
RayTracer/include/TJRayTracer/: BaseObject.h  BasePattern.h  Camera.h  Canvas.h  CheckersPattern.h  Color.h  Comps.h  Cones.h  Cube.h  Cylinder.h  Equal.h  GradientPattern.h  Intersection.h  Material.h  Pixel.h  Plane.h  PointLight.h  Ray.h  RingPattern.h  Sphere.h  StrippedPattern.h  TF.h  TJRayTracer.h  TJRayTracerGlobal.h  TestPattern.h  Timer.h  Utility.h  World.h  stb_image_write.h
RayTracer/src/: BaseObject.cpp  BasePattern.cpp  Camera.cpp  Canvas.cpp  CheckersPattern.cpp  Color.cpp  Comps.cpp  Cones.cpp  Cube.cpp  Cylinder.cpp  GradientPattern.cpp  Intersection.cpp  Material.cpp  Pixel.cpp  Plane.cpp  PointLight.cpp  Ray.cpp  RingPattern.cpp  Sphere.cpp  StrippedPattern.cpp  TF.cpp  TestPattern.cpp  World.cpp
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  makefile
src/TJRayTracer/: BaseObject.cpp  BaseObject.h  BasePattern.cpp  BasePattern.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CheckersPattern.cpp  CheckersPattern.h  Color.cpp  Color.h  Comps.cpp  Comps.h  Cones.cpp  Cones.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Equal.h  GradientPattern.cpp  GradientPattern.h  Intersection.cpp  Intersection.h  Makefile  Material.cpp  Material.h  MatrixXd.cpp  MatrixXd.h  Pixel.cpp  Pixel.h  Plane.cpp  Plane.h  Point.cpp  Point.h  PointLight.cpp  PointLight.h  Ray.cpp  (+19 more)
tests/: CMakeLists.txt  Vec4_test.cpp
