add_library (vec4 Vector.cpp Vec4.cpp Point.cpp Color.cpp Canvas.cpp Pixel.cpp MatrixXd.cpp TF.cpp Ray.cpp Sphere.cpp BaseObject.cpp Intersection.cpp
        PointLight.cpp Material.cpp World.cpp Comps.cpp Camera.cpp Plane.cpp BasePattern.cpp StrippedPattern.cpp GradientPattern.cpp RingPattern.cpp CheckersPattern.cpp TestPattern.cpp Cube.cpp)
target_link_libraries(vec4)
